--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
         <link type='text/css' rel='stylesheet' href='styles.css' />
-        <link type='text/js' rel="javascript" href="guts.js">
+        <link rel="javascript" href='guts.js'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>'Random Quote Machine'</title>
 </head>
 <body>
     
