--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <link type='text/css' rel='stylesheet' href='styles.css' />
-        <link rel="javascript" href='guts.js'>
+        
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -31,5 +31,7 @@
     </div>
     <div class="footer"> by Lobst3rG3off</a></div>
   </div>
+  <script src="guts.js"></script>
 </body>
+
 </html>
