--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div class="footer"> by Lobst3rG3off</a></div>
   </div>
   <script
-  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
   crossorigin="anonymous"></script>
-  <script src="guts.js"></script>
+
+  <script src="guts.js" defer></script>
 </body>
 
 </html>
