--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <link type='text/css' rel='stylesheet' href='styles.css' />
         
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link type='text/css' rel='stylesheet' href='styles.css' />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,7 +11,7 @@
 </head>
 <body>
     
-
+  
 <div id="wrapper">
     <div id="quote-box">
       <div class="quote-text">
@@ -21,10 +22,10 @@
       </div>
       <div class="buttons">
         <a class="button" id="tweet-quote" title="Tweet this quote!" target="_blank">
-          <i class="fa fa-twitter"></i>
+          <i class="fab fa-twitter"></i>
         </a>
         <a class="button" id="tumblr-quote" title="Post this quote on tumblr!" target="_blank">
-          <i class="fa fa-tumblr"></i>
+          <i class="fab fa-tumblr"></i>
         </a>
         <button class="button" id="new-quote">New quote</button>
       </div>
