--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-        
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link type='text/css' rel='stylesheet' href='styles.css' />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>'Random Quote Machine'</title>
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link type='text/css' rel='stylesheet' href='styles.css' />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>'Random Quote Machine'</title>
 </head>
+
 <body>
-    
-  
-<div id="wrapper">
+
+
+  <div id="wrapper">
     <div id="quote-box">
       <div class="quote-text">
         <i class="fa fa-quote-left"> </i><span id="text"></span>
@@ -32,9 +35,7 @@
     </div>
     <div class="footer"> by Lobst3rG3off</a></div>
   </div>
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 
   <script src="guts.js" defer></script>
 </body>
